# PFE-3D-Viewer

./: .clang-format  .doxygen-style.css  .doxygen-viewer  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmarking.py  clean.sh  compile.sh  generate_docs.sh  test.sh
data/configs/: default.toml
data/materials/: mat0.mat  mat1.mat  mat2.mat  mat3.mat  mat4.mat  mat5.mat  mat6.mat  mat_null.mat
data/models/: color_cube.ply  cube_m.ply  cube_rgb.ply  cube_rgbm.ply  cube_rgbmo.ply  matid_cube.ply
data/shaders/: forward.frag  forward.vert  glad.fs  simple.frag  simple.vert
include/: camera.h  cliloader.h  context.h  filewithextension.h  imgui_addons.h  light.h  mesh.h  opengl.h  plyreader.h  scene.h  shader.h  shaderreader.h  utils.h
include/glad/: glad.h
include/guimodules/: module.h  plycontent.h
include/modules/: filedialog.h  imguiFPS.h  imguidemo.h  meshcontent.h  message.h  module.h  plycontent.h  viewer.h
include/renderers/: forward.h  renderer.h  simple.h
include/viewer/: camera.h  cliloader.h  context.h  filewithextension.h  imgui_addons.h  light.h  material.h  mesh.h  scene.h  shaderreader.h  shadersreader.h  tomlloader.h  utils.h
include/viewer/modules/: filedialog.h  imguiFPS.h  imguidemo.h  meshcontent.h  message.h  module.h  shaderscontent.h  viewer.h
include/viewer/renderers/: forward.h  renderer.h  simple.h
src/: camera.cpp  cliloader.cpp  config.toml  context.cpp  filewithextension.cpp  glad.c  imgui_addons.cpp  light.cpp  main.cpp  mesh.cpp  plyreader.cpp  scene.cpp  shaderreader.cpp  utils.cpp  viewer.cpp
src/guimodules/: plycontent.cpp
src/modules/: filedialog.cpp  imguiFPS.cpp  imguidemo.cpp  meshcontent.cpp  message.cpp  module.cpp  plycontent.cpp  viewer.cpp
src/renderers/: forward.cpp  renderer.cpp  simple.cpp
src/viewer/: camera.cpp  cliloader.cpp  context.cpp  filewithextension.cpp  imgui_addons.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  plyreader.cpp  scene.cpp  shaderreader.cpp  shadersreader.cpp  tomlloader.cpp  utils.cpp
src/viewer/modules/: filedialog.cpp  imguiFPS.cpp  imguidemo.cpp  meshcontent.cpp  message.cpp  module.cpp  shaderscontent.cpp  viewer.cpp
src/viewer/renderers/: forward.cpp  renderer.cpp  simple.cpp
tests/: CMakeLists.txt
tests/data/configs/: default-2.toml  default.toml  test_bad_height.toml  test_bad_title.toml  test_bad_width.toml  test_missing_height.toml  test_missing_title.toml  test_missing_width.toml
tests/data/models/: cube.ply
tests/viewer/: CMakeLists.txt  cliloader.cpp  plyreader.cpp  tomlloader.cpp
